# Weather-report

./: .gitignore  README.md  pyproject.toml
tests/: test_api.py  test_cities.py  test_cli.py  test_countries.py  test_report.py  test_weather_service.py
weather_report/: __init__.py  api.py  cities.py  cli.py  countries.py  report.py  weather_service.py
